--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SellerOrders">
+    tools:context=".SellerProducts">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_sellerOrders"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:id="@+id/rv_seller_products"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
