--- a/app/src/main/res/layout/card_view_all_products.xml
+++ b/app/src/main/res/layout/card_view_all_products.xml
@@ -19,7 +19,7 @@
             android:layout_height = "match_parent">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/im_all_products_img"
                 android:layout_width="80dp"
                 android:layout_height="85dp"
                 android:layout_margin="5dp"
@@ -31,7 +31,7 @@
 
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_all_products_name"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -40,7 +40,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.348"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -52,11 +52,11 @@
                 android:paddingLeft="5dp"
                 android:text="MRP : "
                 android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
+                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tv_all_products_mrp"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -66,7 +66,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -77,11 +77,11 @@
                 android:paddingLeft="5dp"
                 android:text="Special Price : "
                 android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
+                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/tv_all_products_dp"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -91,7 +91,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
