--- a/app/src/main/res/layout/activity_seller_add_product.xml
+++ b/app/src/main/res/layout/activity_seller_add_product.xml
@@ -1,77 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SellerAddProduct">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#3f3f41"
+        app:titleTextColor="@color/white" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_below="@id/app_bar"
+        >
+
+
+
 
         <EditText
-            android:layout_marginTop="16dp"
-            android:padding="8dp"
             android:id="@+id/et_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:hint="Product Name"
-            />
+            android:padding="8dp" />
+
         <EditText
-            android:layout_marginTop="12dp"
-            android:padding="8dp"
             android:id="@+id/et_productDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:hint="Product Description"
-            />
+            android:padding="8dp" />
+
         <EditText
+            android:id="@+id/et_MRP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:padding="8dp"
-        android:id="@+id/et_MRP"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"
             android:hint="MRP"
-            />
+            android:inputType="number"
+            android:padding="8dp" />
+
         <EditText
-            android:layout_marginTop="12dp"
-            android:padding="8dp"
             android:id="@+id/et_product_discountedPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:hint="Discounted Price"
-            />
-        <EditText
             android:layout_marginTop="12dp"
-            android:padding="8dp"
+            android:hint="Discounted Price"
+            android:inputType="number"
+            android:padding="8dp" />
+
+        <EditText
             android:id="@+id/et_minQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:hint="Minimum Quantity for discount"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:padding="8dp" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="12dp"
-            android:padding="8dp"
-            android:layout_width="match_parent"
             android:id="@+id/cl"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:padding="8dp">
 
             <ImageView
                 android:id="@+id/iv_productImage"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                tools:layout_editor_absoluteX="137dp"
-                tools:layout_editor_absoluteY="0dp"
-                app:layout_constraintTop_toTopOf="@id/cl"
+                app:layout_constraintLeft_toLeftOf="@id/cl"
                 app:layout_constraintRight_toRightOf="@id/cl"
-                app:layout_constraintLeft_toLeftOf="@id/cl"/>
+                app:layout_constraintTop_toTopOf="@id/cl"
+                tools:layout_editor_absoluteX="137dp"
+                tools:layout_editor_absoluteY="0dp" />
 
             <TextView
                 android:id="@+id/tv_addImageText"
@@ -86,26 +98,18 @@
                 app:layout_constraintVertical_bias="0.504" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <Button
-            android:padding="8dp"
-            android:layout_marginTop="12dp"
             android:id="@+id/bt_addProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="add product"/>
+            android:layout_marginTop="12dp"
+            android:padding="8dp"
+            android:text="add product" />
 
 
     </LinearLayout>
 
 
-
-
-
-
-
-
-
-
-
-</ScrollView>
+</RelativeLayout>
