--- a/app/src/main/res/layout/activity_all_product_desc.xml
+++ b/app/src/main/res/layout/activity_all_product_desc.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".All_Product_Desc">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,8 +31,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="40dp"
             android:layout_marginTop="30dp"
-            android:paddingLeft="5dp"
-            android:hint="Product name" />
+            android:hint="Product name"
+            android:paddingLeft="5dp" />
 
         <TextView
             android:id="@+id/tv_product_desc_desc"
