--- a/app/src/main/res/layout/card_view_buyer_order.xml
+++ b/app/src/main/res/layout/card_view_buyer_order.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_all_products"
@@ -13,25 +13,25 @@
         app:cardCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height = "match_parent">
+            android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/im_all_products_img"
+                android:id="@+id/im_buyer_order_img"
                 android:layout_width="80dp"
                 android:layout_height="85dp"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_profile"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
-                android:id="@+id/tv_all_products_name"
+                android:id="@+id/tv_buyer_order_name"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -40,58 +40,58 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.348"
-                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
+                app:layout_constraintStart_toEndOf="@+id/im_buyer_order_img"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv3"
+                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="4dp"
                 android:paddingLeft="5dp"
-                android:text="MRP : "
+                android:text="Quantity : "
                 android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
+                app:layout_constraintStart_toEndOf="@+id/im_buyer_order_img"
+                app:layout_constraintTop_toBottomOf="@+id/tv_buyer_order_name" />
 
             <TextView
-                android:id="@+id/tv_all_products_mrp"
-                android:layout_width="200dp"
+                android:id="@+id/tv_buyer_order_quantity"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:hint="MRP"
+                android:hint="Quantity"
                 android:paddingLeft="5dp"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/tv3"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_name" />
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/tv_buyer_order_name" />
 
             <TextView
-                android:id="@+id/tv5"
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="8dp"
                 android:paddingLeft="5dp"
-                android:text="Special Price : "
+                android:text="Total Amount : "
                 android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/im_all_products_img"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
+                app:layout_constraintStart_toEndOf="@+id/im_buyer_order_img"
+                app:layout_constraintTop_toBottomOf="@+id/tv_buyer_order_quantity" />
 
             <TextView
-                android:id="@+id/tv_all_products_dp"
+                android:id="@+id/tv_buyer_order_amount"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="discounted price"
+                android:hint="Final Amount"
                 android:paddingLeft="5dp"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/tv5"
-                app:layout_constraintTop_toBottomOf="@+id/tv_all_products_mrp" />
+                app:layout_constraintStart_toEndOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/tv_buyer_order_quantity" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
