--- a/app/src/main/res/layout/buyer_all_products.xml
+++ b/app/src/main/res/layout/buyer_all_products.xml
@@ -77,7 +77,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/left_nav_header"
-        app:menu="@menu/menu_seller">
+        app:menu="@menu/menu_buyer">
 
     </com.google.android.material.navigation.NavigationView>
 
