--- a/app/src/main/res/layout/dialog_input.xml
+++ b/app/src/main/res/layout/dialog_input.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
+            android:inputType="number"
             android:textColor="@color/black"
             android:hint="Enter Quantity"
             android:paddingLeft="5dp" />
