--- a/app/src/main/res/layout/activity_seller_orders.xml
+++ b/app/src/main/res/layout/activity_seller_orders.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/seller_orders_left_nav"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SellerOrders">
@@ -10,7 +11,7 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_board"
+            android:id= "@+id/seller_orders_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/black"/>
@@ -19,7 +20,7 @@
             android:id="@+id/rv_seller_products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar_board"
+            android:layout_below="@id/seller_orders_toolbar"
             android:padding="8dp"
             android:paddingTop="12dp" />
         <!-- app:layout_constraintBottom_toBottomOf="parent"
