--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/seller_products_left_nav"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,7 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_board"
+            android:id="@+id/seller_products_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/black"/>
@@ -21,7 +22,7 @@
             android:id="@+id/rv_seller_products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar_board"
+            android:layout_below="@id/seller_products_toolbar"
             android:padding="8dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -37,7 +38,7 @@
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/seller_products_nav"
+        android:id="@+id/seller_products_nav1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
