--- a/app/src/main/res/menu/menu_buyer.xml
+++ b/app/src/main/res/menu/menu_buyer.xml
@@ -14,6 +14,9 @@
                 <item android:title="@string/profile"
                     android:id="@+id/nav_buyer_profile"
                     android:icon="@drawable/ic_profile"/>
+                <item android:title="Logout"
+                    android:id="@+id/nav_buyer_logout"
+                    android:icon="@drawable/ic_logout"/>
             </menu>
         </item>
 
