--- a/app/src/main/res/menu/menu_seller.xml
+++ b/app/src/main/res/menu/menu_seller.xml
@@ -18,6 +18,9 @@
                 <item android:title="@string/profile"
                     android:id="@+id/nav_seller_profile"
                     android:icon="@drawable/ic_profile"/>
+                <item android:title="Logout"
+                    android:id="@+id/nav_seller_logout"
+                    android:icon="@drawable/ic_logout"/>
             </menu>
         </item>
 
