--- a/app/src/main/res/layout/card_view_buyer_order.xml
+++ b/app/src/main/res/layout/card_view_buyer_order.xml
@@ -19,6 +19,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/buyer_order_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.711"
+                app:layout_constraintStart_toEndOf="@+id/tv_buyer_order_name"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/im_buyer_order_img"
                 android:layout_width="80dp"
@@ -32,14 +42,14 @@
 
             <TextView
                 android:id="@+id/tv_buyer_order_name"
-                android:layout_width="200dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:hint="Hello"
                 android:paddingLeft="5dp"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.348"
+                app:layout_constraintHorizontal_bias="0.161"
                 app:layout_constraintStart_toEndOf="@+id/im_buyer_order_img"
                 app:layout_constraintTop_toTopOf="parent" />
 
